fix(wysiwyg): prevent invisibility of embeds within figures

--- a/assets/scss/components/_wysiwyg.scss
+++ b/assets/scss/components/_wysiwyg.scss
@@ -12,7 +12,9 @@
   }
 
   figure {
-    width: max-content;
+    &:not(.embed-responsive) {
+      width: max-content;
+    }
 
     img {
       margin-top: 0;
